@@ -23,14 +23,10 @@
 
 #include <errno.h>
 #include <getopt.h>
+#include <limits.h>
+#include <locale.h>
 #include <stdio.h>
 #include <stdlib.h>
-
-#ifdef HAVE_LIMITS_H
-# include <limits.h>
-#endif
-
-#include <locale.h>
 
 #include "dir-list.h"
 #include "str-list.h"
