@@ -1,3 +1,10 @@
+2001-07-23  Bruno Haible  <haible@clisp.cons.org>
+
+	* msgcomm.c: Assume <limits.h> exists.
+	* msgexec.c: Likewise.
+	* msggrep.c: Likewise.
+	* write-po.c: Likewise.
+
 2001-08-02  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.c (usage): Change bug report address to
